[package]
name = "murf-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[features]
debug = []

[dependencies]
convert_case = "0.6"
lazy_static = "1.4"
proc-macro2 = {  version = "1.0", features = [ "span-locations" ] }
quote = "1.0"
regex = "1.7"
sha1 = "0.10"
syn = { version = "1.0", features = [ "extra-traits", "full" ] }
